# docs/swagger.json
@@ -14,7 +14,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "server.mypoints.site",
     "basePath": "/api/v1",
     "paths": {
         "/:id/agent": {
@@ -309,6 +309,106 @@
                     }
                 }
             }
+        },
+        "/reward/:id": {
+            "post": {
+                "description": "create reward by admins.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "admins can create reward",
+                "parameters": [
+                    {
+                        "description": "body request",
+                        "name": "newReward",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.NewReward"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RowsAffected"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "soft delete reward data by id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reward"
+                ],
+                "summary": "soft delete reward data",
+                "parameters": [
+                    {
+                        "description": "body request",
+                        "name": "deleteReward",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.DeleteReward"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RowsAffected"
+                        }
+                    }
+                }
+            }
+        },
+        "/reward/:id/:rewardId": {
+            "put": {
+                "description": "update reward data by id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Reward"
+                ],
+                "summary": "update reward data",
+                "parameters": [
+                    {
+                        "description": "body request",
+                        "name": "updateReward",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateReward"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.RowsAffected"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -320,6 +420,43 @@
                 },
                 "refresh_token": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.DeleteReward": {
+            "type": "object",
+            "required": [
+                "id"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.NewReward": {
+            "type": "object",
+            "required": [
+                "admin_id",
+                "points",
+                "title",
+                "value"
+            ],
+            "properties": {
+                "admin_id": {
+                    "type": "string"
+                },
+                "img": {
+                    "type": "string"
+                },
+                "points": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "integer"
                 }
             }
         },
@@ -352,6 +489,36 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.RowsAffected": {
+            "type": "object",
+            "properties": {
+                "rows_affected": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateReward": {
+            "type": "object",
+            "required": [
+                "points",
+                "title",
+                "value"
+            ],
+            "properties": {
+                "img": {
+                    "type": "string"
+                },
+                "points": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "integer"
                 }
             }
         },
