# src/rewards/dto/reward_res.go
@@ -1,1 +1,5 @@
 package dto
+
+type RowsAffected struct {
+	RowsAffected int64 `json:"rows_affected"`
+}
