# src/rewards/router/http_router.go
@@ -25,5 +25,7 @@ func (r *HttpRouter) GetRoute() {
 	v1 := api.Group("/v1")
 
 	//	Private - for admin only
-	v1.Post("/reward", middleware.JwtVerifyTokenAdmin, rewardHandler.CreateReward)
+	v1.Post("/reward/:id", middleware.JwtVerifyTokenAdmin, rewardHandler.CreateReward)
+	v1.Put("/reward/:id/:rewardId", middleware.JwtVerifyTokenAdmin, rewardHandler.UpdateReward)
+	v1.Delete("/reward/:id/", middleware.JwtVerifyTokenAdmin, rewardHandler.DeleteReward)
 }
